@@ -2200,6 +2200,11 @@ is used.
 Do not allow data to be cached from a remote server for this
 mount.
 
+@item nocasetrans
+@cindex Mount flags; nocasetrans
+Don't do case translation. Useful for CD-ROMS formatted as
+ISO-9660.
+
 @item noconn
 @cindex Mount flags; noconn
 Don't make a connection on datagram transports.
@@ -2226,6 +2231,10 @@ Don't allow program execution.
 @item noint
 @cindex Mount flags; noint
 Do not allow keyboard interrupts for this mount
+
+@item nojoliet
+@cindex Mount flags; nojoliet
+Turn off the Joliet extensions.  Useful for CD-ROMS formatted as ISO-9660.
 
 @item nolock
 @cindex Mount flags; nolock
@@ -2320,6 +2329,11 @@ trying}.
 @item retry
 @cindex Mount flags; retry
 Set the NFS retry counter.
+
+@item rrcaseins
+@cindex Mount flags; rrcaseins
+Enable the Rock Ridge Interchange Protocol (RRIP) case insensitive extensions.
+Useful for CD-ROMS formatted as ISO-9660.
 
 @item rrip
 @cindex Mount flags; rrip
